--- a/SolutionSecurity/SolutionSecurity.csproj
+++ b/SolutionSecurity/SolutionSecurity.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SecurityEncryption.cs" />
     <Compile Include="SecurityValidation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
