--- a/WebApplication10/Web.config
+++ b/WebApplication10/Web.config
@@ -35,4 +35,10 @@
 		  <add name="SecurityValidation" type="SolutionSecurity.SecurityValidation, SolutionSecurity"/>
 	  </httpModules>
   </system.web>
+
+	<system.webServer>
+		<modules>
+			<add name="SecurityValidation" type="SolutionSecurity.SecurityValidation, SolutionSecurity"/>
+		</modules>
+	</system.webServer>
 </configuration>
