--- a/WebApplication10/Web.config
+++ b/WebApplication10/Web.config
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-  <appSettings>
-    <add key="AppRoot" value="http://localhost:60381"/>
-    <add key="DefaultUrl" value="http://localhost:60381/Default.asp"/>
-    <add key="AllowedPages" value="ApplicationControl.aspx, Adding.ashx, Check.ashx"/>
-    <add key="AllowedApplications" value="ICEPermissions2018"/>
-  </appSettings>
-  <connectionStrings/>
-  <!--
+	<appSettings>
+		<add key="SecurityActivation" value="true"/>
+		<add key="AppRoot" value="https://localhost:44334"/>
+		<add key="InternalAppRoot" value="https://localhost:44334"/>
+		<add key="DefaultUrl" value="https://localhost:44334/Default.asp"/>
+		<add key="AllowedPages" value="ApplicationControl.aspx, Adding.ashx, Check.ashx"/>
+		<add key="AllowedApplications" value="ICEPermissions2018"/>
+	</appSettings>
+	<connectionStrings/>
+	<!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
     The following attributes can be set on the <httpRuntime> tag.
@@ -15,15 +17,15 @@
         <httpRuntime targetFramework="4.6.2" />
       </system.Web>
   -->
-  <system.web>
-    <compilation debug="true" targetFramework="4.6.2"/>
-    <!--
+	<system.web>
+		<compilation debug="true" targetFramework="4.6.2"/>
+		<!--
       The <authentication> section enables configuration 
       of the security authentication mode used by 
       ASP.NET to identify an incoming user. 
     -->
-    <authentication mode="Windows"/>
-    <!--
+		<authentication mode="Windows"/>
+		<!--
        The <customErrors> section enables configuration 
        of what to do if/when an unhandled error occurs 
        during the execution of a request. Specifically, 
@@ -35,9 +37,9 @@
          <error statusCode="404" redirect="FileNotFound.htm" />
        </customErrors>
     -->
-    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
-	  <httpModules>
-		  <add name="SecurityValidation" type="SolutionSecurity.SecurityValidation, SolutionSecurity"/>
-	  </httpModules>
-  </system.web>
+		<pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
+		<httpModules>
+			<add name="SecurityValidation" type="SolutionSecurity.SecurityValidation, SolutionSecurity"/>
+		</httpModules>
+	</system.web>
 </configuration>
