--- a/ICEPermisions2018/Web.config
+++ b/ICEPermisions2018/Web.config
@@ -17,6 +17,9 @@
     </pages>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
+
+        <!--<add name="SecurityValidation" type="SolutionSecurity.SecurityValidation, SolutionSecurity"/>-->
+
     </httpModules>
   </system.web>
   <runtime>
