--- a/WebApplication10/Web.config
+++ b/WebApplication10/Web.config
@@ -7,6 +7,7 @@
 		<add key="DefaultUrl" value="https://localhost:44334/Default.asp"/>
 		<add key="AllowedPages" value="ApplicationControl.aspx, Adding.ashx, Check.ashx"/>
 		<add key="AllowedApplications" value="ICEPermissions2018"/>
+    <add key="LogOutUrl" value="default.asp"/>
 	</appSettings>
 	<connectionStrings/>
 	<!--
