--- a/WebApplication10/Web.config
+++ b/WebApplication10/Web.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0"?>
 <configuration>
 	<appSettings>
-		<add key="SecurityActivation" value="true"/>
+		<add key="SecurityActivation" value="True"/>
 		<add key="AppRoot" value="https://localhost:44334"/>
-		<add key="InternalAppRoot" value="https://localhost:44334"/>
+		<add key="InternalAppRoot" value="https://localhost:44334/"/>
 		<add key="DefaultUrl" value="https://localhost:44334/Default.asp"/>
 		<add key="AllowedPages" value="ApplicationControl.aspx, Adding.ashx, Check.ashx"/>
 		<add key="AllowedApplications" value="ICEPermissions2018"/>
