--- a/WebApplication10/Web.config
+++ b/WebApplication10/Web.config
@@ -5,9 +5,10 @@
 		<add key="AppRoot" value="https://localhost:44334"/>
 		<add key="InternalAppRoot" value="https://localhost:44334"/>
 		<add key="DefaultUrl" value="https://localhost:44334/Default.asp"/>
+    <add key="LoginUrl" value="https://localhost:44334/Login.asp"/>
+    <add key="LogOutUrl" value="default.asp"/>
 		<add key="AllowedPages" value="ApplicationControl.aspx, Adding.ashx, Check.ashx"/>
 		<add key="AllowedApplications" value="ICEPermissions2018"/>
-    <add key="LogOutUrl" value="default.asp"/>
 	</appSettings>
 	<connectionStrings/>
 	<!--
