--- a/SolutionSecurity/SolutionSecurity.csproj
+++ b/SolutionSecurity/SolutionSecurity.csproj
@@ -42,9 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdministrationPage.cs" />
     <Compile Include="SecurityEncryption.cs" />
     <Compile Include="SecurityValidation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidationRequest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
