--- a/WebApplication10/Web.config
+++ b/WebApplication10/Web.config
@@ -2,11 +2,13 @@
 <configuration>
 	<appSettings>
 		<add key="SecurityActivation" value="true"/>
-		<add key="AppRoot" value="https://localhost:44334"/>
+		<!--<add key="AppRoot" value="https://localhost:44334"/>-->
 		<add key="InternalAppRoot" value="https://localhost:44334"/>
-		<add key="DefaultUrl" value="https://localhost:44334/Default.asp"/>
-    <add key="LoginUrl" value="https://localhost:44334/Login.asp"/>
-    <add key="LogOutUrl" value="default.asp"/>
+		<add key="DefaultRootUrl" value="https://localhost:44334/Default.asp"/>
+		<add key="DefaultChildUrl" value="https://localhost:44334/Default.asp"/>
+		<!--<add key="LoginUrl" value="https://localhost:44334/Login.asp"/>-->
+		<add key="LogOutUrl" value="default.asp"/>
+		<add key="LogOutChildUrl" value="default.asp"/>
 		<add key="AllowedPages" value="ApplicationControl.aspx, Adding.ashx, Check.ashx"/>
 		<add key="AllowedApplications" value="ICEPermissions2018"/>
 	</appSettings>
