--- a/SolutionSecurity/SolutionSecurity.csproj
+++ b/SolutionSecurity/SolutionSecurity.csproj
@@ -46,7 +46,7 @@
     <Compile Include="SecurityEncryption.cs" />
     <Compile Include="SecurityValidation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValidationRequest.cs" />
+    <Compile Include="AdministrationRequest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
