--- a/WebApplication10/Web.config
+++ b/WebApplication10/Web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <configuration>
 	<appSettings>
-		<add key="SecurityActivation" value="true"/>
+		<add key="SecurityActivation" value="false"/>
 		<!--<add key="AppRoot" value="https://localhost:44334"/>-->
 		<add key="InternalAppRoot" value="https://localhost:44334"/>
 		<add key="DefaultRootUrl" value="https://localhost:44334/Default.asp"/>
