--- a/WebApplication10/Web.config
+++ b/WebApplication10/Web.config
@@ -1,49 +1,21 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-	<appSettings>
-		<add key="SecurityActivation" value="false"/>
-		<!--<add key="AppRoot" value="https://localhost:44334"/>-->
-		<add key="InternalAppRoot" value="https://localhost:44334"/>
-		<add key="DefaultRootUrl" value="https://localhost:44334/Default.asp"/>
-		<add key="DefaultChildUrl" value="https://localhost:44334/Default.asp"/>
-		<!--<add key="LoginUrl" value="https://localhost:44334/Login.asp"/>-->
-		<add key="LogOutUrl" value="default.asp"/>
-		<add key="LogOutChildUrl" value="default.asp"/>
-		<add key="AllowedPages" value="ApplicationControl.aspx, Adding.ashx, Check.ashx"/>
-		<add key="AllowedApplications" value="ICEPermissions2018"/>
-	</appSettings>
-	<connectionStrings/>
-	<!--
-    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.6.2" />
-      </system.Web>
-  -->
-	<system.web>
-		<compilation debug="true" targetFramework="4.6.2"/>
-		<!--
-      The <authentication> section enables configuration 
-      of the security authentication mode used by 
-      ASP.NET to identify an incoming user. 
-    -->
-		<authentication mode="Windows"/>
-		<!--
-       The <customErrors> section enables configuration 
-       of what to do if/when an unhandled error occurs 
-       during the execution of a request. Specifically, 
-       it enables developers to configure html error pages 
-       to be displayed in place of a error stack trace.
-
-       <customErrors mode="RemoteOnly" defaultRedirect="GenericErrorPage.htm">
-         <error statusCode="403" redirect="NoAccess.htm" />
-         <error statusCode="404" redirect="FileNotFound.htm" />
-       </customErrors>
-    -->
-		<pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
-		<httpModules>
-			<add name="SecurityValidation" type="SolutionSecurity.SecurityValidation, SolutionSecurity"/>
-		</httpModules>
-	</system.web>
+  <appSettings>
+    <add key="SecurityActivation" value="false"/>
+    <add key="InternalAppRoot" value="https://localhost:44334"/>
+    <add key="DefaultRootUrl" value="https://localhost:44334/Default.asp"/>
+    <add key="DefaultChildUrl" value="https://localhost:44334/Default.asp"/>
+    <add key="LogOutUrl" value="default.asp"/>
+    <add key="LogOutChildUrl" value="default.asp"/>
+    <add key="AllowedPages" value="ApplicationControl.aspx, Adding.ashx, Check.ashx"/>
+    <add key="AllowedApplications" value="ICEPermissions2018"/>
+  </appSettings>
+  <connectionStrings/>
+  <system.web>
+    <authentication mode="Windows"/>
+    <httpModules>
+      <add name="SecurityValidation" type="SolutionSecurity.SecurityValidation, SolutionSecurity"/>
+    </httpModules>
+    <compilation debug="true"/>
+  </system.web>
 </configuration>
